--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -10,4 +10,5 @@
     <string name="info_location_permission_needed">Necessitem permis per fer servir el GPS per mostrat-te els supermercats més propers. Sense aquest permís la app no funcinarà correctament.</string>
     <string name="info_no_close_super">No hem trobat cap super proper</string>
     <string name="no_location_permission">No tenim permisos de localització</string>
+    <string name="minutes">minuts</string>
 </resources>
