--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="info_no_close_super">We didn\'t find any close supermarkets</string>
     <string name="no_location_permission">We don\'t have location permission</string>
     <string name="minutes">minutes</string>
+    <string name="settings">Settings</string>
+    <string name="notification_mode">Notification mode</string>
+    <string name="turn_notification">Turn notification</string>
+    <string name="time_notification">Time notification</string>
+    <string name="turn_notification_summary">From how many turns you want to be notified?</string>
+    <string name="time_notification_summary">From how much time you want to be notified?</string>
 </resources>
