Enviar notificacio mogut a una funcio. Canvis de nom a variable textView temps. Si la cua del usuari es 1, enviem notificacio avisant de que es el seguent. Quan el torn del usuari arriba, borrem el torn del hashmap de ETornApplication per a que quan surti de la activitat, ja no existeixi aquell torn i pugui demanar mes.

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -11,4 +11,7 @@
     <string name="info_no_close_super">No hem trobat cap super proper</string>
     <string name="no_location_permission">No tenim permisos de localització</string>
     <string name="minutes">minuts</string>
+    <string name="nextInQueue">Ets el següent a la cua</string>
+    <string name="notificationTitle">Torn Caprabo</string>
+    <string name="is_your_turn">Es el teu torn</string>
 </resources>
